Added new section for gestures. Just a template

--- a/literature-review/main.tex
+++ b/literature-review/main.tex
@@ -11,6 +11,8 @@
 % Useful packages
 \usepackage{amsmath}
 \usepackage{graphicx}
+\usepackage{titlesec}
+\usepackage{xcolor}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 
 % Keywords command
@@ -88,7 +90,9 @@ While many lessons where learned and many guidelines where formed in the literat
 Another lesson learned about mobile applications is from \cite{RODRIGUEZSANCHEZ20147210} where the authors state that fixed regions of a device such as the devices corners and buttons are preferred when creating and designing a mobile application. Lastly, \cite{bandyopadhyay2017sound} states very simply that mobile phones offer a low cost means of software accessibility for the visually impaired. The latter statement is a great summation of why we where leaning towards developing some sort of mobile application.
 
 
+\subsubsection{Gestures in Mobille Applications/Devices}
 
+\par {\color{magenta} New papers to be added in this section. }
 
 \subsection{General Guidelines For Different Types Of Maps}
 When exploring the subject of maps in particular there where many papers that talked about the ability to use 3D printed maps as a tool for the visually impaired. I think it is important to note here that we did not consider going in this direction because our lessons learned showed it to be less than promising as a solution to our problem. With that being said here is a list of our lessons learned about 3D printed maps.
