bib file update

--- a/main.bib
+++ b/main.bib
@@ -1,4 +1,56 @@
-#Christian bibs
+#Guario
+@inproceedings{10.1145/1978942.1979001,
+author = {Kane, Shaun K. and Wobbrock, Jacob O. and Ladner, Richard E.},
+title = {Usable Gestures for Blind People: Understanding Preference and Performance},
+year = {2011},
+isbn = {9781450302289},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1978942.1979001},
+doi = {10.1145/1978942.1979001},
+abstract = {Despite growing awareness of the accessibility issues surrounding touch screen use by blind people, designers still face challenges when creating accessible touch screen interfaces. One major stumbling block is a lack of understanding about how blind people actually use touch screens. We conducted two user studies that compared how blind people and sighted people use touch screen gestures. First, we conducted a gesture elicitation study in which 10 blind and 10 sighted people invented gestures to perform common computing tasks on a tablet PC. We found that blind people have different gesture preferences than sighted people, including preferences for edge-based gestures and gestures that involve tapping virtual keys on a keyboard. Second, we conducted a performance study in which the same participants performed a set of reference gestures. We found significant differences in the speed, size, and shape of gestures performed by blind people versus those performed by sighted people. Our results suggest new design guidelines for accessible touch screen interfaces.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {413–422},
+numpages = {10},
+keywords = {gesture recognition, gestures, touch screens, accessibility, blind},
+location = {Vancouver, BC, Canada},
+series = {CHI '11}
+}
+@inproceedings{10.1145/1414471.1414487,
+author = {Kane, Shaun K. and Bigham, Jeffrey P. and Wobbrock, Jacob O.},
+title = {Slide Rule: Making Mobile Touch Screens Accessible to Blind People Using Multi-Touch Interaction Techniques},
+year = {2008},
+isbn = {9781595939760},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1414471.1414487},
+doi = {10.1145/1414471.1414487},
+abstract = {Recent advances in touch screen technology have increased the prevalence of touch screens and have prompted a wave of new touch screen-based devices. However, touch screens are still largely inaccessible to blind users, who must adopt error-prone compensatory strategies to use them or find accessible alternatives. This inaccessibility is due to interaction techniques that require the user to visually locate objects on the screen. To address this problem, we introduce Slide Rule, a set of audio-based multi-touch interaction techniques that enable blind users to access touch screen applications. We describe the design of Slide Rule, our interaction techniques, and a user study in which 10 blind people used Slide Rule and a button-based Pocket PC screen reader. Results show that Slide Rule was significantly faster than the button-based system, and was preferred by 7 of 10 users. However, users made more errors when using Slide Rule than when using the more familiar button-based system.},
+booktitle = {Proceedings of the 10th International ACM SIGACCESS Conference on Computers and Accessibility},
+pages = {73–80},
+numpages = {8},
+keywords = {speech output, blindness, mobile devices, accessibility, touch screens, multi-touch interaction techniques},
+location = {Halifax, Nova Scotia, Canada},
+series = {Assets '08}
+}
+@inproceedings{10.1145/1842993.1843072,
+author = {Bellucci, Andrea and Malizia, Alessio and Diaz, Paloma and Aedo, Ignacio},
+title = {Don't Touch Me: Multi-User Annotations on a Map in Large Display Environments},
+year = {2010},
+isbn = {9781450300766},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1842993.1843072},
+doi = {10.1145/1842993.1843072},
+abstract = {Touchless interaction techniques do not require physical contact while interacting with a system so to allow natural interaction with digital information, made tangible in the physical world through pervasive screen displays. In this project we explore the use of Nintendo Wii Remote controller as a touchless interface for interacting with map based applications in large displays environments. A prototype (Don't Touch Me) was developed that allows users to collaborative place multimodal annotations on a map: pictorials, auditives and haptics.},
+booktitle = {Proceedings of the International Conference on Advanced Visual Interfaces},
+pages = {391–392},
+numpages = {2},
+keywords = {georeferenced information, human-display interaction, CSCW, touchless interaction},
+location = {Roma, Italy},
+series = {AVI '10}
+}
+# Christians bibs
 @inproceedings{10.1145/2207676.2207734,
 author = {Yatani, Koji and Banovic, Nikola and Truong, Khai},
 title = {SpaceSense: Representing Geographical Information to Visually Impaired People Using Spatial Tactile Feedback},
